syntax="proto3";

package monitor;

message ReportEventReply{
	bool success = 1; //True for success, False otherwise 
}

message ReportEventReq{
    string influxdbURL = 1;
    string nodeID = 2;
	string membershipID = 3;
}

service Reporter {
	rpc ReportEvent(ReportEventReq) returns (ReportEventReply) {}
}